# bootcamp_python_aula_09

./: README.md  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  teste.py
data/: coleta_dia01.json
