[tool.poetry]
name = "bootcamp-python-aula-09"
version = "0.1.0"
description = ""
authors = ["Victor Almeida <vrodrigoleite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
