[project]
name = "bootcamp-python-aula-09"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Almeida",email = "vrodrigoleite@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
